novo sistema de permissoes

--- a/assets/components/navbar/navbar.css
+++ b/assets/components/navbar/navbar.css
@@ -1,7 +1,7 @@
 #navbar {
     width: 100%;
     height: 50px;
-    background: #2e537a;    
+    background: #4EA59D;    
 }
 #navbar .btn {
     padding: 14px;
