--- a/assets/components/aside/aside.css
+++ b/assets/components/aside/aside.css
@@ -1,7 +1,7 @@
 #aside {
     width: 250px;
     height: 100vh;
-    background: white;
+    background: #4EA59D !important;
     overflow-x: hidden;
     overflow-y: scroll;
     transition: .5s;
@@ -22,17 +22,29 @@
     width: 1px;
     background-color: darkgrey;
 }
+
+#aside .aside-link.active {
+    background: #f1f1f1;
+    color: #555;
+    border-color: #ccc;
+}
+#aside .aside-header {
+    width: 100%;
+    height: 50px;
+}
 #aside .panel-heading {
     border-radius: 0px !important;
     border-top-left-radius: 0px !important;
     border-top-right-radius: 0px !important;
-    color: #777;
-    background: white;    
+    color: #FFF;
+    background: #4EA59D;    
 }
 #aside .panel {
     margin: 1px;
     border: 1px;
     border-radius: 0px !important;    
+    color: #fff;
+    background: #4EA59D !important;
 }
 
 @media 
