--- a/assets/global/global.css
+++ b/assets/global/global.css
@@ -24,7 +24,7 @@ body {
     padding-bottom: 100px;
     overflow-y: scroll;
     overflow-x: hidden;
-    background: #F7FAFF;    
+    background: #F7FAFF;
 }
 
 .container {
@@ -39,9 +39,23 @@ body {
   border-color: #4EA59D !important;
 }
 
+#footer {
+  height: 50px;
+  width: calc( 100vw - 250px );
+  background: #F7FAFF;
+  border-top: 1px solid #ccc;
+  position: fixed;
+  bottom: 0px;
+  right: 0px;
+}
+
 @media 
 only screen and (max-width: 760px),
 (min-device-width: 768px) and (max-device-width: 1024px)  {
+
+    #footer {
+      width: 100%;
+    }
 
     #wrapper {
         width: 100%;
